added l2 regularization to costFunction

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -106,7 +106,8 @@
     "        self.drop_prob = drop_prob\n",
     "        self.reg_lambda = reg_lambda\n",
     "        \n",
-    "        self.weights = [np.random.randn(layer_dimensions[layer + 1], layer_dimensions[layer]) for layer in range(num_layers)]\n",
+    "        self.weights = [np.random.randn(layer_dimensions[layer],\n",
+    "                                        layer_dimensions[layer - 1]) for layer in range(1, num_layers)]\n",
     "        self.biases = [np.random.randn(layer, 1) for layer in layer_dimensions[1:]]\n",
     "        \n",
     "        # init parameters\n",
@@ -134,6 +135,7 @@
     "        \"\"\" \n",
     "        if activation == 'relu':\n",
     "            return relu(dropout(self, A, self.drop_prob)[0])\n",
+    "        \n",
     "        else:\n",
     "            return dropout(self, A, self.drop_prob)[0]\n",
     "\n",
@@ -169,7 +171,6 @@
     "                     are needed in further steps\n",
     "        \"\"\"\n",
     "        \n",
-    "        layer_dimensions = [X.shape[0]] + layer_dimensions\n",
     "        weights = self.weights\n",
     "        biases = self.biases\n",
     "        \n",
@@ -192,13 +193,20 @@
     "        :returns cost, dAL: A scalar denoting cost and the gradient of cost\n",
     "        \"\"\"\n",
     "        # compute loss\n",
+    "        numerators = np.exp(X[y, np.arange(y.shape[0])])\n",
+    "        denominators = np.sum(np.exp(X), axis=0)\n",
     "        \n",
     "        if self.reg_lambda > 0:\n",
     "            # add regularization\n",
+    "            l2 = 0\n",
+    "            \n",
+    "            for W in self.weights:\n",
+    "                l2 += np.sum(np.power(W, 2))\n",
+    "            \n",
+    "        l2 = l2 + self.reg_lambda/(2*y.shape[0])\n",
+    "        cost = sum(-np.log(numerators/denominators))/X.shape[1] + l2\n",
     "        \n",
     "        elif self.reg_lambda == 0:\n",
-    "            numerators = np.exp(X[y, np.arange(y.shape[0])])\n",
-    "            denominators = np.sum(np.exp(X), axis=0)\n",
     "            cost = sum(-np.log(numerators/denominators))/X.shape[1]\n",
     "        \n",
     "        # gradient of cost\n",
@@ -324,6 +332,7 @@
     "        if end_index <= num_samples:\n",
     "            X_batch = X[:, start_index:end_index]\n",
     "            y_batch = y[start_index:end_index]\n",
+    "            \n",
     "        else:\n",
     "            num_needed = end_index - num_samples\n",
     "            idx = np.random.randint(low=0, high=start_index + 1, size=num_needed)\n",
@@ -336,33 +345,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-04T03:03:18.097484",
-     "start_time": "2017-10-04T03:03:18.061450"
+     "end_time": "2017-10-05T01:56:50.125562",
+     "start_time": "2017-10-05T01:56:50.086525"
     },
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[   6.31729407    0.            0.          287.51565015    0.\n",
-      "   353.73907008]\n",
-      " [ 279.0002916   746.17159706  813.19123657  706.86742116  764.29415644\n",
-      "   626.96247963]\n",
-      " [   0.            0.            0.            0.            0.            0.        ]\n",
-      " [ 348.3216389   567.12755548  439.94904344  496.26449085  482.62854408\n",
-      "   695.64305073]]\n",
-      "15.574543096\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def affineForward(A, W, b):\n",
     "\n",
@@ -411,7 +405,8 @@
     "        :returns cost, dAL: A scalar denoting cost and the gradient of cost\n",
     "        \"\"\"\n",
     "        # compute loss\n",
-    "        \n",
+    "        print(X)\n",
+    "        print(AL)\n",
     "        return sum(-np.log(np.exp(X[y, np.arange(y.shape[0])])/np.sum(np.exp(X), axis=0)))\n",
     "\n",
     "X = np.random.randn(4, 6)\n",
@@ -423,40 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-10-04T02:58:51.999092",
-     "start_time": "2017-10-04T02:58:51.995089"
-    },
-    "run_control": {
-     "frozen": false,
-     "read_only": false
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0  1  2  3  4  5]\n",
-      " [12 13 14 15 16 17]\n",
-      " [ 2  3  4  5  6  7]\n",
-      " [ 5  6  7  8  9 10]]\n",
-      "[12  3 14  3  9  5]\n"
-     ]
-    }
-   ],
-   "source": [
-    "X = np.array([range(6), np.arange(12, 18), np.arange(2, 8), np.arange(5, 11)])\n",
-    "y = np.array([1, 2, 1, 0, 3, 0])\n",
-    "print(X)\n",
-    "print(X[y, np.arange(y.shape[0])])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-10-05T00:58:30.571677",
@@ -467,36 +429,7 @@
      "read_only": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19]\n",
-      " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19]\n",
-      " [ 2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21]\n",
-      " [ 2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21]]\n",
-      "[3 1 3 1 2 0 0 2 0 3 0 0 2 0 2 1 0 2 2 1]\n",
-      "[  7.38905610e+00   2.71828183e+00   5.45981500e+01   2.00855369e+01\n",
-      "   4.03428793e+02   1.48413159e+02   4.03428793e+02   8.10308393e+03\n",
-      "   2.98095799e+03   5.98741417e+04   2.20264658e+04   5.98741417e+04\n",
-      "   1.20260428e+06   4.42413392e+05   8.88611052e+06   3.26901737e+06\n",
-      "   8.88611052e+06   1.78482301e+08   4.85165195e+08   1.78482301e+08]\n",
-      "[  1.67781122e+01   4.56076375e+01   1.23974412e+02   3.36997392e+02\n",
-      "   9.16053887e+02   2.49009264e+03   6.76877356e+03   1.83994342e+04\n",
-      "   5.00148476e+04   1.35954451e+05   3.69562514e+05   1.00457507e+06\n",
-      "   2.73071815e+06   7.42286153e+06   2.01774296e+07   5.48479403e+07\n",
-      "   1.49092159e+08   4.05274507e+08   1.10165033e+09   2.99459607e+09]\n",
-      "[ 0.44039854  0.05960146  0.44039854  0.05960146  0.44039854  0.05960146\n",
-      "  0.05960146  0.44039854  0.05960146  0.44039854  0.05960146  0.05960146\n",
-      "  0.44039854  0.05960146  0.44039854  0.05960146  0.05960146  0.44039854\n",
-      "  0.44039854  0.05960146]\n",
-      "38.4015038321\n",
-      "20\n",
-      "1.9200751916\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = np.array([range(20), range(20), np.arange(2, 22), np.arange(2, 22)])\n",
     "y = np.random.randint(low=0, high=4, size=(20))\n",
@@ -515,47 +448,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-10-05T01:10:23.665396",
      "start_time": "2017-10-05T01:10:23.640372"
+    },
+    "run_control": {
+     "frozen": false,
+     "read_only": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0 12 15  3  8 16  7  5 11 10 14  6  2  4 18 19 13  9 17  1]\n",
-      " [ 0 12 15  3  8 16  7  5 11 10 14  6  2  4 18 19 13  9 17  1]\n",
-      " [ 2 14 17  5 10 18  9  7 13 12 16  8  4  6 20 21 15 11 19  3]\n",
-      " [ 2 14 17  5 10 18  9  7 13 12 16  8  4  6 20 21 15 11 19  3]]\n",
-      "[3 2 1 1 0 0 2 0 0 0 2 0 3 2 2 1 0 3 2 1]\n",
-      "0\n",
-      "(array([[ 0, 12, 15,  3,  8, 16],\n",
-      "       [ 0, 12, 15,  3,  8, 16],\n",
-      "       [ 2, 14, 17,  5, 10, 18],\n",
-      "       [ 2, 14, 17,  5, 10, 18]]), array([3, 2, 1, 1, 0, 0]))\n",
-      "1\n",
-      "(array([[ 7,  5, 11, 10, 14,  6],\n",
-      "       [ 7,  5, 11, 10, 14,  6],\n",
-      "       [ 9,  7, 13, 12, 16,  8],\n",
-      "       [ 9,  7, 13, 12, 16,  8]]), array([2, 0, 0, 0, 2, 0]))\n",
-      "2\n",
-      "(array([[ 2,  4, 18, 19, 13,  9],\n",
-      "       [ 2,  4, 18, 19, 13,  9],\n",
-      "       [ 4,  6, 20, 21, 15, 11],\n",
-      "       [ 4,  6, 20, 21, 15, 11]]), array([3, 2, 2, 1, 0, 3]))\n",
-      "3\n",
-      "[ 9  0 11  7]\n",
-      "(array([[17,  1, 10,  0,  6,  5],\n",
-      "       [17,  1, 10,  0,  6,  5],\n",
-      "       [19,  3, 12,  2,  8,  7],\n",
-      "       [19,  3, 12,  2,  8,  7]]), array([2, 1, 0, 3, 0, 0]))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_batch(X, y, start_index, batch_size):\n",
     "\n",
@@ -583,17 +487,59 @@
     "            # get minibatch\n",
     "    minibatch = get_batch(X_shuffle, y_shuffle, i*6, 6)\n",
     "\n",
-    "            \n",
-    "            # forward prop\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-10-05T03:05:22.201946",
+     "start_time": "2017-10-05T03:05:22.193939"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.46545872 -1.18451186 -0.14435158 ..., -1.10285693  0.2096132\n",
+      "   0.09647918]\n",
+      " [ 0.41830311 -0.58718594  1.15162257 ...,  0.35347054  1.02449449\n",
+      "   1.59520472]]\n",
+      "2026.51851294\n",
+      "[[-1.44841695  1.47592368]\n",
+      " [ 0.9179381   0.29827026]\n",
+      " [ 0.53612275 -0.41796752]]\n",
+      "2032.18847529\n",
+      "[[ 1.51503008 -0.84580818  0.65553981]\n",
+      " [-0.10485777  0.83321957 -0.84311856]\n",
+      " [-0.46200693  0.99529294  0.21866331]\n",
+      " [ 0.56383977 -1.84154886  1.46773239]\n",
+      " [ 0.1304769  -0.62208291  0.08807739]\n",
+      " [ 0.86629397 -0.14887122 -1.06486437]\n",
+      " [ 0.09059368 -1.40816211 -0.58023079]\n",
+      " [-0.1845622   1.98474232  0.64060703]\n",
+      " [-0.57914649  0.62148421  1.19365481]\n",
+      " [ 0.29024885 -0.68542022  0.12202937]]\n",
+      "2055.90551489\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "layer_dimensions = [1024, 2, 3, 10]\n",
+    "num_layers = len(layer_dimensions)\n",
+    "w = [np.random.randn(layer_dimensions[layer],\n",
+    "                                        layer_dimensions[layer - 1]) for layer in range(1, num_layers)]\n",
     "\n",
-    "            # compute loss\n",
-    "\n",
-    "            # compute gradients\n",
-    "\n",
-    "            # update weights and biases based on gradient\n",
-    "\n",
-    "        #if i % print_every == 0:\n",
-    "                # print cost, train and validation set accuracies\n"
+    "sum = 0\n",
+    "for arr in w:\n",
+    "    print(arr)\n",
+    "    sum += np.sum(np.power(arr, 2))\n",
+    "    print(sum)\n",
+    "print(len(layer_dimensions))"
    ]
   },
   {
