change mini batch to randomly get batch_size sample every time

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -282,14 +282,9 @@
     "        :param print_every: no. of iterations to print debug info after\n",
     "        \"\"\"\n",
     "        \n",
-    "        #randomize X and y\n",
-    "        tmp = list(zip(X,y))\n",
-    "        np.random.shuffle(tmp)\n",
-    "        X,y = zip(*tmp)\n",
-    "        \n",
     "        for i in range(0, iters):\n",
     "            # get minibatch\n",
-    "            minibatch = get_batch(X, y, i*batch_size, batch_size)\n",
+    "            minibatch = get_batch(X, y, batch_size)\n",
     "            \n",
     "            # forward prop\n",
     "\n",
@@ -309,7 +304,7 @@
     "\n",
     "        return y_pred\n",
     "\n",
-    "    def get_batch(self, X, y, start_index, batch_size):\n",
+    "    def get_batch(self, X, y, batch_size):\n",
     "        \"\"\"\n",
     "        Return minibatch of samples and labels\n",
     "        \n",
@@ -318,16 +313,10 @@
     "        :returns: (tuple) X_batch, y_batch\n",
     "        \"\"\"\n",
     "        num_samples = len(y)\n",
+    "        idx = np.random.randint(num_samples, size=batch_size)\n",
     "        \n",
-    "        end_index = start_index + batch_size\n",
-    "        if(end_index <= num_samples):\n",
-    "            X_batch = X[:,start_index:end_index]\n",
-    "            y_batch = y[start_index:end_index]\n",
-    "        else:\n",
-    "            num_needed = end_index - num_samples\n",
-    "            idx = np.random.randint(num_samples, size=num_needed)\n",
-    "            X_batch = X[:,start_index:num_samples] + X[:,idx]\n",
-    "            y_batch = y[start_index:num_samples] + y[idx]\n",
+    "        X_batch = X[:,idx]\n",
+    "        y_batch = y[idx]\n",
     "\n",
     "        return X_batch, y_batch"
    ]
