--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-10-05T00:08:27.573373",
@@ -61,13 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-30T21:01:50.263907",
      "start_time": "2017-09-30T21:01:50.148796"
     },
-    "collapsed": true,
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -76,10 +76,10 @@
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-bef933227d5d>, line 46)",
+     "evalue": "invalid syntax (<ipython-input-9-00586248cd93>, line 122)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-bef933227d5d>\"\u001b[1;36m, line \u001b[1;32m46\u001b[0m\n\u001b[1;33m    def relu(self, X):\u001b[0m\n\u001b[1;37m      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-00586248cd93>\"\u001b[0;36m, line \u001b[0;32m122\u001b[0m\n\u001b[0;31m    elif self.reg_lambda == 0:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -205,7 +205,6 @@
     "            \n",
     "        l2 = l2 + self.reg_lambda/(2*y.shape[0])\n",
     "        cost = sum(-np.log(numerators/denominators))/X.shape[1] + l2\n",
-    "        \n",
     "        elif self.reg_lambda == 0:\n",
     "            cost = sum(-np.log(numerators/denominators))/X.shape[1]\n",
     "        \n",
@@ -241,14 +240,18 @@
     "        Interface to call backward on activation functions.\n",
     "        In this case, it's just relu. \n",
     "        \"\"\"\n",
-    "\n",
+    "        if activation == 'relu':\n",
+    "            return relu(dropout_backward(self, dA, self.cache)[1])\n",
+    "        \n",
+    "        else:\n",
+    "            return dropout_backward(self, dA, self.cache)[1]\n",
     "        \n",
     "    def relu_derivative(self, dx, cached_x):\n",
-    "\n",
+    "        dx = np.where(cached_x > 0)\n",
     "        return dx\n",
     "\n",
     "    def dropout_backward(self, dA, cache):\n",
-    "\n",
+    "        dA = \n",
     "        return dA\n",
     "\n",
     "    def backPropagation(self, dAL, Y, cache):\n",
@@ -265,6 +268,7 @@
     "            \n",
     "            \n",
     "            if self.drop_prob > 0:\n",
+    "                return dropout_backward(self, dA, cache)\n",
     "                #call dropout_backward\n",
     "           \n",
     "            \n",
@@ -332,18 +336,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-10-05T01:56:50.125562",
      "start_time": "2017-10-05T01:56:50.086525"
     },
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[   0.            0.            0.            0.            0.            0.        ]\n",
+      " [   0.            0.            0.            0.            0.            0.        ]\n",
+      " [ 346.11393379  342.60731341  382.5911783   211.71014542  484.10177676\n",
+      "   439.99221486]\n",
+      " [   0.            0.            0.            0.            0.            0.        ]]\n",
+      "[[-1.0512458   0.59673156  1.17942456 -0.49144803  1.60792931  1.06653289]\n",
+      " [-1.04056201  0.14560455 -0.76195773 -0.62429588  1.45913116  1.08310527]\n",
+      " [-0.20205452 -0.45376338  0.39750631  0.20755261 -0.20782217 -0.13270209]\n",
+      " [ 0.246701    0.38693215 -0.59426762  1.13966871  0.93655367 -1.83375772]]\n",
+      "[[   0.            0.            0.            0.            0.            0.        ]\n",
+      " [   0.            0.            0.            0.            0.            0.        ]\n",
+      " [ 346.11393379  342.60731341  382.5911783   211.71014542  484.10177676\n",
+      "   439.99221486]\n",
+      " [   0.            0.            0.            0.            0.            0.        ]]\n",
+      "11.3248613121\n"
+     ]
+    }
+   ],
    "source": [
     "def affineForward(A, W, b):\n",
     "\n",
@@ -411,6 +438,7 @@
      "end_time": "2017-10-05T00:58:30.571677",
      "start_time": "2017-10-05T00:58:30.558664"
     },
+    "collapsed": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -441,6 +469,7 @@
      "end_time": "2017-10-05T01:10:23.665396",
      "start_time": "2017-10-05T01:10:23.640372"
     },
+    "collapsed": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -484,7 +513,8 @@
     "ExecuteTime": {
      "end_time": "2017-10-05T03:05:22.201946",
      "start_time": "2017-10-05T03:05:22.193939"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -531,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "run_control": {
@@ -572,15 +602,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-11-72e163b042df>, line 70)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-72e163b042df>\"\u001b[0;36m, line \u001b[0;32m70\u001b[0m\n\u001b[0;31m    \"\"\"\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "# Functions to load data, DO NOT change these\n",
     "\n",
@@ -659,15 +698,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_train_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-03832d710ab4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Load the data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdata_root_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/path/to/extracted/data/cifar10-hw1/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_train_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_root_path\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# this may take a few minutes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mX_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_root_path\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'test'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Data loading done'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'get_train_data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Load the data\n",
     "data_root_path = '/path/to/extracted/data/cifar10-hw1/'\n",
@@ -792,9 +843,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
