--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -67,7 +67,6 @@
      "end_time": "2017-09-30T21:01:50.263907",
      "start_time": "2017-09-30T21:01:50.148796"
     },
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -154,7 +153,7 @@
     "            M is dropout mask, used in the backward pass\n",
     "        \"\"\"\n",
     "        M = np.random.binomial(1, 1 - prob, A.shape)\n",
-    "        A = M*A\n",
+    "        A = (M*A)/(1 - prob)\n",
     "        \n",
     "        return A, M\n",
     "\n",
@@ -342,7 +341,6 @@
      "end_time": "2017-10-05T01:56:50.125562",
      "start_time": "2017-10-05T01:56:50.086525"
     },
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -514,7 +512,10 @@
      "end_time": "2017-10-05T03:05:22.201946",
      "start_time": "2017-10-05T03:05:22.193939"
     },
-    "collapsed": false
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -604,7 +605,6 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -700,7 +700,6 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -843,9 +842,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
