--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -295,15 +295,19 @@
     "        \n",
     "        for i in range(0, iters):\n",
     "            # get minibatch\n",
-    "            minibatch = get_batch(X, y, batch_size)\n",
+    "            X_batch, y_batch = get_batch(X, y, batch_size)\n",
     "            \n",
     "            # forward prop\n",
+    "            AL, cache = forwardPropagation(X_batch)\n",
     "\n",
     "            # compute loss\n",
+    "            cost, dAL = costFunction(AL,y_batch)\n",
     "\n",
     "            # compute gradients\n",
+    "            gradients = backPropagation(dAL,y_batch,cache)\n",
     "\n",
     "            # update weights and biases based on gradient\n",
+    "            updateParameters(gradients,alpha)\n",
     "\n",
     "            if i % print_every == 0:\n",
     "                # print cost, train and validation set accuracies\n",
@@ -842,7 +846,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -856,7 +860,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
