filled in predict function

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -317,6 +317,7 @@
     "        Make predictions for each sample\n",
     "        \"\"\"\n",
     "\n",
+    "        y_pred = [np.argmax(forwardPropagation(x)) for x in X]\n",
     "        return y_pred\n",
     "\n",
     "    def get_batch(self, X, y, batch_size):\n",
