fill in updateParameters function

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -261,7 +261,8 @@
     "        :param cache: cached values during forwardprop\n",
     "        :returns gradients: dW and db for each weight/bias\n",
     "        \"\"\"\n",
-    "        gradients = {}\n",
+    "        gradients = {'dW': [np.zeros(w.shape) for w in self.weights],\n",
+    "                     'db': [np.zeros(b.shape) for b in self.biases]}\n",
     "        \n",
     "        for ...:\n",
     "            \n",
@@ -282,6 +283,9 @@
     "        :param gradients: gradients for each weight/bias\n",
     "        :param alpha: step size for gradient descent \n",
     "        \"\"\"\n",
+    "        \n",
+    "        self.weights = [w + (alpha * dw) for w, dw in zip(self.weights,gradients['dW'])]\n",
+    "        self.biases = [b + (alpha * db) for b, db in zip(self.biases,gradients['db'])]\n",
     "\n",
     "    def train(self, X, y, iters=1000, alpha=0.0001, batch_size=100, print_every=100):\n",
     "        \"\"\"\n",
