added gradient of the cost

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -36,11 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 256,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-05T00:08:27.573373",
-     "start_time": "2017-10-05T00:08:27.549851"
+     "end_time": "2017-10-08T01:00:14.176612",
+     "start_time": "2017-10-08T01:00:14.171607"
     },
     "collapsed": true,
     "run_control": {
@@ -192,8 +192,7 @@
     "        :returns cost, dAL: A scalar denoting cost and the gradient of cost\n",
     "        \"\"\"\n",
     "        # compute loss\n",
-    "        numerators = np.exp(X[y, np.arange(y.shape[0])])\n",
-    "        denominators = np.sum(np.exp(X), axis=0)\n",
+    "        a = np.exp(X[y, np.arange(y.shape[0])])/np.sum(np.exp(X), axis=0)\n",
     "        \n",
     "        if self.reg_lambda > 0:\n",
     "            # add regularization\n",
@@ -202,13 +201,14 @@
     "            for W in self.weights:\n",
     "                l2 += np.sum(np.power(W, 2))\n",
     "            \n",
-    "        l2 = l2 + self.reg_lambda/(2*y.shape[0])\n",
-    "        cost = sum(-np.log(numerators/denominators))/X.shape[1] + l2\n",
+    "            l2 = l2 + self.reg_lambda/(2*y.shape[0])\n",
+    "            cost = np.sum(-np.log(a))/X.shape[1] + l2\n",
+    "        \n",
     "        elif self.reg_lambda == 0:\n",
-    "            cost = sum(-np.log(numerators/denominators))/X.shape[1]\n",
+    "            cost = np.sum(-np.log(a))/X.shape[1]\n",
     "        \n",
     "        # gradient of cost\n",
-    "        dAL =\n",
+    "        dAL = -(y - a) - (1 - y)/(1 - a)\n",
     "        \n",
     "        return cost, dAL\n",
     "\n",
@@ -439,33 +439,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 273,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-05T00:58:30.571677",
-     "start_time": "2017-10-05T00:58:30.558664"
+     "end_time": "2017-10-08T01:10:29.161137",
+     "start_time": "2017-10-08T01:10:29.149126"
     },
-    "collapsed": true,
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3 4 5]\n",
+      " [0 1 2 3 4 5]\n",
+      " [2 3 4 5 6 7]\n",
+      " [2 3 4 5 6 7]]\n",
+      "[1 2 1 0 3 0]\n",
+      "[   1.           20.08553692    7.3890561    20.08553692  403.42879349\n",
+      "  148.4131591 ]\n",
+      "[   16.7781122     45.6076375    123.97441226   336.99739205   916.05388705\n",
+      "  2490.09263506]\n",
+      "[ 0.05960146  0.44039854  0.05960146  0.05960146  0.44039854  0.05960146]\n",
+      "12.9204511496\n",
+      "6\n",
+      "2.15340852494\n",
+      "[-0.94039854  0.22738458 -0.94039854 -1.00377748  1.01437062 -1.00377748]\n"
+     ]
+    }
+   ],
    "source": [
-    "X = np.array([range(20), range(20), np.arange(2, 22), np.arange(2, 22)])\n",
-    "y = np.random.randint(low=0, high=4, size=(20))\n",
+    "X = np.array([range(6), range(6), np.arange(2, 8), np.arange(2, 8)])\n",
+    "y = np.array([1, 2, 1, 0, 3, 0])\n",
     "print(X)\n",
     "print(y)\n",
     "print(np.exp(X[y, np.arange(y.shape[0])]))\n",
     "print(np.sum(np.exp(X), axis=0))\n",
     "print(np.exp(X[y, np.arange(y.shape[0])])/np.sum(np.exp(X), axis=0))\n",
-    "print(sum(-np.log(np.exp(X[y, np.arange(y.shape[0])])/np.sum(np.exp(X), axis=0))))\n",
-    "numerators = np.exp(X[y, np.arange(y.shape[0])])\n",
-    "denominators = np.sum(np.exp(X), axis=0)\n",
+    "print(np.sum(-np.log(np.exp(X[y, np.arange(y.shape[0])])/np.sum(np.exp(X), axis=0))))\n",
+    "a = np.exp(X[y, np.arange(y.shape[0])])/np.sum(np.exp(X), axis=0)\n",
     "print(X.shape[1])\n",
-    "cost = sum(-np.log(numerators/denominators))/X.shape[1]\n",
-    "print(cost)"
+    "cost = np.sum(-np.log(a))/X.shape[1]\n",
+    "print(cost)\n",
+    "print(-(y - a) - (1 - y)/(1 - a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-10-08T01:10:33.961356",
+     "start_time": "2017-10-08T01:10:33.956351"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.15340852494\n",
+      "[-0.94039854  0.22738458 -0.94039854 -1.00377748  1.01437062 -1.00377748]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.exp(X[y, np.arange(y.shape[0])])/np.sum(np.exp(X), axis=0)\n",
+    "cost = np.sum(-np.log(a))/X.shape[1]\n",
+    "        \n",
+    "dAL = -(y - a) - (1 - y)/(1 - a)\n",
+    "\n",
+    "print(cost)\n",
+    "print(dAL)"
    ]
   },
   {
@@ -851,7 +900,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -865,7 +914,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
