modified forwardPropagation to skip dropout on first and last layers

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -135,8 +135,8 @@
     "        if activation == 'relu':\n",
     "            return relu(dropout(self, A, self.drop_prob)[0])\n",
     "        \n",
-    "        else:\n",
-    "            return dropout(self, A, self.drop_prob)[0]\n",
+    "        elif activation == 'relu_no_dropout':\n",
+    "            return relu(self, A, self.drop_prob)\n",
     "\n",
     "        \n",
     "    def relu(self, X):\n",
@@ -179,7 +179,12 @@
     "        for i in range(self.num_layers):\n",
     "            h, c = affineForward(AL, weights[i], biases[i])\n",
     "            cache.append(c)\n",
-    "            AL = activationForward(h)\n",
+    "            \n",
+    "            if i == 0 or i == num_layers:\n",
+    "                AL = activationForward(h, activation='relu_no_dropout')\n",
+    "            \n",
+    "            else:\n",
+    "                AL = activationForward(h)\n",
     "            \n",
     "        return AL, cache\n",
     "\n",
@@ -495,6 +500,10 @@
     "ExecuteTime": {
      "end_time": "2017-10-08T01:10:33.961356",
      "start_time": "2017-10-08T01:10:33.956351"
+    },
+    "run_control": {
+     "frozen": false,
+     "read_only": false
     }
    },
    "outputs": [
