--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -67,6 +67,7 @@
      "end_time": "2017-09-30T21:01:50.263907",
      "start_time": "2017-09-30T21:01:50.148796"
     },
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -143,7 +144,7 @@
     "        return np.maximum(0, X)\n",
     "            \n",
     "        \n",
-    "    def dropout(self, A, prob):\n",
+    "    def:\n",
     "        \"\"\"\n",
     "        :param A: \n",
     "        :param prob: drop prob\n",
@@ -255,8 +256,8 @@
     "        return dx\n",
     "\n",
     "    def dropout_backward(self, dA, cache):\n",
-    "        dA = \n",
-    "        return dA\n",
+    "        dA = 1 - cache **2\n",
+    "        return dA \n",
     "\n",
     "    def backPropagation(self, dAL, Y, cache):\n",
     "        \"\"\"\n",
@@ -268,16 +269,15 @@
     "        \"\"\"\n",
     "        gradients = {'dW': [np.zeros(w.shape) for w in self.weights],\n",
     "                     'db': [np.zeros(b.shape) for b in self.biases]}\n",
-    "        \n",
-    "        for ...:\n",
-    "            \n",
-    "            \n",
+    "        w_len = (self.num_layers) - 1\n",
+    "        for i in range(w_len):\n",
     "            if self.drop_prob > 0:\n",
     "                return dropout_backward(self, dA, cache)\n",
     "                #call dropout_backward\n",
     "           \n",
     "            \n",
     "        if self.reg_lambda > 0:\n",
+    "            \n",
     "            # add gradients from L2 regularization to each dW\n",
     "        \n",
     "        return gradients\n",
@@ -289,8 +289,8 @@
     "        :param alpha: step size for gradient descent \n",
     "        \"\"\"\n",
     "        \n",
-    "        self.weights = [w + (alpha * dw) for w, dw in zip(self.weights,gradients['dW'])]\n",
-    "        self.biases = [b + (alpha * db) for b, db in zip(self.biases,gradients['db'])]\n",
+    "        self.weights = [w - (alpha * dw) for w, dw in zip(self.weights,gradients['dW'])]\n",
+    "        self.biases = [b - (alpha * db) for b, db in zip(self.biases,gradients['db'])]\n",
     "\n",
     "    def train(self, X, y, iters=1000, alpha=0.0001, batch_size=100, print_every=100):\n",
     "        \"\"\"\n",
@@ -355,6 +355,7 @@
      "end_time": "2017-10-05T01:56:50.125562",
      "start_time": "2017-10-05T01:56:50.086525"
     },
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -450,6 +451,7 @@
      "end_time": "2017-10-08T01:10:29.161137",
      "start_time": "2017-10-08T01:10:29.149126"
     },
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -501,6 +503,7 @@
      "end_time": "2017-10-08T01:10:33.961356",
      "start_time": "2017-10-08T01:10:33.956351"
     },
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -579,6 +582,7 @@
      "end_time": "2017-10-05T03:05:22.201946",
      "start_time": "2017-10-05T03:05:22.193939"
     },
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -672,6 +676,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -767,6 +772,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -909,9 +915,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
