--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -277,9 +277,9 @@
     "           \n",
     "            \n",
     "        if self.reg_lambda > 0:\n",
-    "            \n",
+    "            dW += dAL*self.weights\n",
     "            # add gradients from L2 regularization to each dW\n",
-    "        \n",
+    "            \n",
     "        return gradients\n",
     "\n",
     "\n",
