--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -61,13 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 134,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-08T22:53:31.426415",
-     "start_time": "2017-10-08T22:53:31.054682"
+     "end_time": "2017-10-08T23:32:27.527970",
+     "start_time": "2017-10-08T23:32:27.174552"
     },
-    "collapsed": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -103,7 +102,6 @@
     "        self.biases = [np.random.randn(layer, 1) for layer in layer_dimensions[1:]]\n",
     "        \n",
     "        # init parameters\n",
-    "        \n",
     "\n",
     "    def affineForward(self, A, W, b):\n",
     "        \"\"\"\n",
@@ -169,11 +167,11 @@
     "        cache = []\n",
     "        AL = X\n",
     "        \n",
-    "        for i in range(self.num_layers):\n",
-    "            h, c = self.affineForward(AL, weights[i], biases[i])\n",
+    "        for i in range(1, self.num_layers):\n",
+    "            h, c = self.affineForward(AL, weights[i - 1], biases[i - 1])\n",
     "            cache.append(c)\n",
     "            \n",
-    "            if i == 0 or i == self.num_layers:\n",
+    "            if (i - 1) == 0 or i == (self.num_layers - 1):\n",
     "                AL = self.activationForward(h, activation='relu_no_dropout')\n",
     "            \n",
     "            else:\n",
@@ -190,7 +188,7 @@
     "        :returns cost, dAL: A scalar denoting cost and the gradient of cost\n",
     "        \"\"\"\n",
     "        # compute loss\n",
-    "        a = np.exp(X[y, np.arange(y.shape[0])])/np.sum(np.exp(X), axis=0)\n",
+    "        a = np.exp(AL[y.astype(int), np.arange(y.shape[0])])/np.sum(np.exp(AL), axis=0)\n",
     "        \n",
     "        if self.reg_lambda > 0:\n",
     "            # add regularization\n",
@@ -200,10 +198,10 @@
     "                l2 += np.sum(np.power(W, 2))\n",
     "            \n",
     "            l2 = l2 + self.reg_lambda/(2*y.shape[0])\n",
-    "            cost = np.sum(-np.log(a))/X.shape[1] + l2\n",
+    "            cost = np.sum(-np.log(a))/AL.shape[1] + l2\n",
     "        \n",
     "        elif self.reg_lambda == 0:\n",
-    "            cost = np.sum(-np.log(a))/X.shape[1]\n",
+    "            cost = np.sum(-np.log(a))/AL.shape[1]\n",
     "        \n",
     "        # gradient of cost\n",
     "        dAL = -(y - a) - (1 - y)/(1 - a)\n",
@@ -325,13 +323,13 @@
     "            AL, cache = self.forwardPropagation(X_batch)\n",
     "\n",
     "            # compute loss\n",
-    "            cost, dAL = costFunction(AL,y_batch)\n",
+    "            cost, dAL = self.costFunction(AL,y_batch)\n",
     "\n",
     "            # compute gradients\n",
-    "            gradients = backPropagation(dAL,y_batch,cache)\n",
+    "            gradients = self.backPropagation(dAL,y_batch,cache)\n",
     "\n",
     "            # update weights and biases based on gradient\n",
-    "            updateParameters(gradients,alpha)\n",
+    "            self.updateParameters(gradients,alpha)\n",
     "\n",
     "            if i % print_every == 0:\n",
     "                train_pred = self.predict(X_train)\n",
@@ -347,7 +345,7 @@
     "        Make predictions for each sample\n",
     "        \"\"\"\n",
     "\n",
-    "        y_pred = [np.argmax(forwardPropagation(x)) for x in X]\n",
+    "        y_pred = [np.argmax(self.forwardPropagation(x)) for x in X]\n",
     "        return y_pred\n"
    ]
   },
@@ -449,11 +447,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 123,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-08T22:50:25.407860",
-     "start_time": "2017-10-08T22:50:25.401855"
+     "end_time": "2017-10-08T23:25:53.958495",
+     "start_time": "2017-10-08T23:25:53.953491"
     }
    },
    "outputs": [
@@ -461,18 +459,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3,)\n",
-      "(5,)\n",
-      "0.6\n"
+      "[1 2 3 4 5]\n"
      ]
     }
    ],
    "source": [
-    "a = np.array([1, 2, 3, 4, 5])\n",
+    "a = np.array([1., 2., 3., 4., 5.])\n",
     "b = np.array([1, 2, 0, 2, 5])\n",
     "\n",
-    "print(np.where(a == b)[0].shape)\n",
-    "print(a.shape)\n"
+    "\n",
+    "print(a.astype(int))\n"
    ]
   },
   {
@@ -807,11 +803,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 135,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-08T22:53:36.170028",
-     "start_time": "2017-10-08T22:53:35.362573"
+     "end_time": "2017-10-08T23:32:32.745755",
+     "start_time": "2017-10-08T23:32:31.919599"
     },
     "run_control": {
      "frozen": false,
@@ -821,36 +817,50 @@
    },
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-80-c99da1264d74>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mlayer_dimensions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m30\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m]\u001b[0m  \u001b[1;31m# including the input and output layers\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mNN\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNeuralNetwork\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlayer_dimensions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mNN\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0miters\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.01\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprint_every\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-79-61ac0345cf5a>\u001b[0m in \u001b[0;36mtrain\u001b[1;34m(self, X, y, iters, alpha, batch_size, print_every)\u001b[0m\n\u001b[0;32m    246\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    247\u001b[0m             \u001b[1;31m# forward prop\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 248\u001b[1;33m             \u001b[0mAL\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcache\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mforwardPropagation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_batch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    249\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    250\u001b[0m             \u001b[1;31m# compute loss\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-79-61ac0345cf5a>\u001b[0m in \u001b[0;36mforwardPropagation\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m     94\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     95\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum_layers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 96\u001b[1;33m             \u001b[0mh\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maffineForward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mAL\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbiases\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     97\u001b[0m             \u001b[0mcache\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     98\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Anaconda3\\lib\\site-packages\\ipykernel\\__main__.py:115: RuntimeWarning: overflow encountered in exp\n",
+      "C:\\Anaconda3\\lib\\site-packages\\ipykernel\\__main__.py:128: RuntimeWarning: divide by zero encountered in log\n"
      ]
     }
    ],
    "source": [
     "layer_dimensions = [X_train.shape[0], 20, 30, 20, 10]  # including the input and output layers\n",
     "NN = NeuralNetwork(layer_dimensions)\n",
-    "NN.train(X_train, y_train, iters=5, alpha=0.01, batch_size=100, print_every=5)"
+    "NN.train(X_train, y_train, iters=2, alpha=0.01, batch_size=100, print_every=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {
-    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2017-10-08T23:32:36.113886",
+     "start_time": "2017-10-08T23:32:36.100874"
+    },
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (20,3072) and (10000,) not aligned: 3072 (dim 1) != 10000 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-136-d344c99731de>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0my_predicted\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNN\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0msave_predictions\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'ans1-uni'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_predicted\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-134-242b80a9ee86>\u001b[0m in \u001b[0;36mpredict\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    270\u001b[0m         \"\"\"\n\u001b[0;32m    271\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 272\u001b[1;33m         \u001b[0my_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mforwardPropagation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    273\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-134-242b80a9ee86>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    270\u001b[0m         \"\"\"\n\u001b[0;32m    271\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 272\u001b[1;33m         \u001b[0my_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mforwardPropagation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    273\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-134-242b80a9ee86>\u001b[0m in \u001b[0;36mforwardPropagation\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m     93\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     94\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum_layers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 95\u001b[1;33m             \u001b[0mh\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maffineForward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mAL\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbiases\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     96\u001b[0m             \u001b[0mcache\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     97\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-134-242b80a9ee86>\u001b[0m in \u001b[0;36maffineForward\u001b[1;34m(self, A, W, b)\u001b[0m\n\u001b[0;32m     35\u001b[0m         \u001b[1;33m:\u001b[0m\u001b[0mreturns\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mthe\u001b[0m \u001b[0maffine\u001b[0m \u001b[0mproduct\u001b[0m \u001b[0mWA\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malong\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mcache\u001b[0m \u001b[0mrequired\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mbackward\u001b[0m \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m         \"\"\"\n\u001b[1;32m---> 37\u001b[1;33m         \u001b[0mZ\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmatmul\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mA\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     38\u001b[0m         \u001b[0mcache\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: shapes (20,3072) and (10000,) not aligned: 3072 (dim 1) != 10000 (dim 0)"
+     ]
+    }
+   ],
    "source": [
     "y_predicted = NN.predict(X_test)\n",
     "save_predictions('ans1-uni', y_predicted)"
