--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -252,7 +252,7 @@
     "        return dx\n",
     "\n",
     "    def dropout_backward(self, dA, cache):\n",
-    "        dA = 1 - cache **2\n",
+    "        dA = A*self.cache\n",
     "        \n",
     "        return dA \n",
     "\n",
@@ -504,6 +504,7 @@
      "end_time": "2017-10-09T02:34:39.982969",
      "start_time": "2017-10-09T02:34:18.346828"
     },
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -555,6 +556,7 @@
      "end_time": "2017-10-09T04:06:43.446225",
      "start_time": "2017-10-09T04:06:13.408168"
     },
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -591,6 +593,7 @@
      "end_time": "2017-10-09T02:38:08.328841",
      "start_time": "2017-10-09T02:37:58.525751"
     },
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -657,6 +660,7 @@
      "end_time": "2017-10-09T04:03:32.633530",
      "start_time": "2017-10-09T04:03:32.417517"
     },
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -966,9 +970,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
