relu is no longer applied on the final activation layer

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -61,11 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 214,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-09T14:59:06.575037",
-     "start_time": "2017-10-09T14:59:06.143015"
+     "end_time": "2017-10-09T16:42:54.295107",
+     "start_time": "2017-10-09T16:42:53.774078"
     },
     "run_control": {
      "frozen": false,
@@ -137,7 +137,7 @@
     "        \n",
     "        elif activation == 'relu_no_dropout':\n",
     "            return self.relu(A)\n",
-    "\n",
+    "        \n",
     "        \n",
     "    def relu(self, X):\n",
     "        return np.maximum(0, X)\n",
@@ -180,8 +180,11 @@
     "            h, c = self.affineForward(AL, weights[i], biases[i])\n",
     "            cache.append(c)\n",
     "            \n",
-    "            if i == 0 or i == (self.num_layers - 2):\n",
+    "            if i == 0:\n",
     "                AL = self.activationForward(h, activation='relu_no_dropout')\n",
+    "                \n",
+    "            elif i == (self.num_layers - 2):\n",
+    "                AL = h\n",
     "            \n",
     "            else:\n",
     "                AL = self.activationForward(h)\n",
@@ -201,7 +204,7 @@
     "        numerator = AL[y.astype(int), np.arange(y.shape[0])]\n",
     "        denominator = scipy.misc.logsumexp(AL, axis=0)\n",
     "        a = np.exp(numerator - denominator)\n",
-    "        \n",
+    "\n",
     "        if self.reg_lambda > 0:\n",
     "            # add regularization\n",
     "            l2 = 0\n",
@@ -335,6 +338,7 @@
     "            \n",
     "            # forward prop\n",
     "            AL, cache = self.forwardPropagation(X_batch)\n",
+    "            test = np.matmul(self.weights[0], X_batch) + self.biases[0]\n",
     "\n",
     "            # compute loss\n",
     "            cost, dAL = self.costFunction(AL, y_batch)\n",
@@ -365,64 +369,6 @@
     "            y_pred.append(pred)\n",
     "        \n",
     "        return y_pred\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-10-09T13:57:30.330562",
-     "start_time": "2017-10-09T13:57:30.324556"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "A = np.array([[1, 2, 1, 2], [2, 1, 2, 2]])\n",
-    "mean = (np.sum(A, axis=1)/A.shape[1]).reshape(-1, 1)\n",
-    "zero_centered = A - mean\n",
-    "var = (np.sum((zero_centered)**2, axis=1)/A.shape[1]).reshape(-1, 1)\n",
-    "normalized_A = zero_centered/np.sqrt(var)\n",
-    "print(normalized_A)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-10-09T14:45:45.697075",
-     "start_time": "2017-10-09T14:45:45.066225"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 18.67265605,  16.99880862,  17.25887716, ...,  23.42170059,\n",
-       "         19.2060056 ,  18.17201872],\n",
-       "       [  8.54535413, -12.68528368,  -8.07660061, ...,  12.37411175,\n",
-       "         22.40644425,  16.58650189],\n",
-       "       [-13.7878074 , -11.29410805,   4.88825986, ..., -16.0872072 ,\n",
-       "         13.02875857, -26.4141018 ],\n",
-       "       ..., \n",
-       "       [ 32.44467502,  27.33659246,  -6.95562331, ...,  22.92603428,\n",
-       "          6.68108812,  44.63197464],\n",
-       "       [ 38.33469369,  55.02260164,  36.28064785, ...,  28.5252041 ,\n",
-       "         28.47727093,  37.67259921],\n",
-       "       [ 28.43862647,  57.25296504,  32.27274389, ...,  43.31123685,\n",
-       "         29.37618552,  22.26171272]])"
-      ]
-     },
-     "execution_count": 159,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "w = np.random.randn(20, 3072)\n",
-    "np.matmul(w, X_train)"
    ]
   },
   {
@@ -599,11 +545,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 215,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-09T15:03:21.298654",
-     "start_time": "2017-10-09T14:59:37.580209"
+     "end_time": "2017-10-09T16:44:00.930730",
+     "start_time": "2017-10-09T16:43:28.316478"
     },
     "run_control": {
      "frozen": false,
@@ -613,65 +559,20 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda3\\lib\\site-packages\\ipykernel\\__main__.py:143: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "C:\\Anaconda3\\lib\\site-packages\\ipykernel\\__main__.py:143: RuntimeWarning: invalid value encountered in true_divide\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cost: 95.43664912547823, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 75.1243909138317, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 91.69455551700362, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 83.19138335785544, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 89.06343966071239, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 80.34502364815006, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 79.8554568770422, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 87.56349874904902, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 84.7173980865544, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 81.44071673043501, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 86.28407993615924, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 89.17438988966475, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 92.68648660086947, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 87.49736253011324, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 86.75487734426895, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 91.25398386595877, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 84.07171992455001, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 85.58260677123704, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 72.80933546179031, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 93.80414981174643, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 86.13618515185405, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 78.71035835959914, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 88.78064576828291, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 80.59661364122967, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 89.99899586858288, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 89.3360093666591, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 88.44339745882084, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 85.62230087081241, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 89.18611032354119, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 82.47238991513119, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 79.63025097156543, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 94.68365465356837, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 84.10975987921947, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 76.13872766159758, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 86.91366736210094, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 85.77196283421874, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 90.77519391194113, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 89.57640058779802, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 78.54922640223747, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 85.1183425493738, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 90.73962078945422, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n"
+      "cost: 147.93983192510032, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
+      "cost: 130.86400550998323, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
+      "cost: 125.94931256474815, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
+      "cost: 131.48517322709804, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n"
      ]
     }
    ],
    "source": [
     "layer_dimensions = [X_train.shape[0], 20, 10]  # including the input and output layers\n",
     "NN = NeuralNetwork(layer_dimensions)\n",
-    "NN.train(X_train, y_train, iters=205, alpha=0.00001, batch_size=128, print_every=5)"
+    "NN.train(X_train, y_train, iters=20, alpha=0.00001, batch_size=100, print_every=5)"
    ]
   },
   {
