no more divide by 0 errors during softmax calculation

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -61,11 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 248,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-09T16:42:54.295107",
-     "start_time": "2017-10-09T16:42:53.774078"
+     "end_time": "2017-10-09T17:10:20.346634",
+     "start_time": "2017-10-09T17:10:19.896867"
     },
     "run_control": {
      "frozen": false,
@@ -200,10 +200,9 @@
     "        :returns cost, dAL: A scalar denoting cost and the gradient of cost\n",
     "        \"\"\"\n",
     "        # compute loss\n",
-    "        \n",
+    "\n",
     "        numerator = AL[y.astype(int), np.arange(y.shape[0])]\n",
     "        denominator = scipy.misc.logsumexp(AL, axis=0)\n",
-    "        a = np.exp(numerator - denominator)\n",
     "\n",
     "        if self.reg_lambda > 0:\n",
     "            # add regularization\n",
@@ -216,7 +215,7 @@
     "            cost = np.sum(-np.log(a))/AL.shape[1] + l2\n",
     "        \n",
     "        elif self.reg_lambda == 0:\n",
-    "            cost = np.sum(-np.log(a))/AL.shape[1]\n",
+    "            cost = np.sum(-(numerator - denominator))/AL.shape[1]\n",
     "        \n",
     "        # gradient of cost\n",
     "        dAL = -(y/AL) + (1 - y)/(1 - AL)\n",
@@ -545,11 +544,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 247,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-09T16:44:00.930730",
-     "start_time": "2017-10-09T16:43:28.316478"
+     "end_time": "2017-10-09T17:08:57.223781",
+     "start_time": "2017-10-09T17:07:15.226685"
     },
     "run_control": {
      "frozen": false,
@@ -562,17 +561,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cost: 147.93983192510032, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 130.86400550998323, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 125.94931256474815, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n",
-      "cost: 131.48517322709804, training accuracy: 0.10824444444444445, validation accuracy: 0.1104\n"
+      "cost: 2498.0716984238275, training accuracy: 0.09713333333333334, validation accuracy: 0.101\n",
+      "cost: 2475.4221838838193, training accuracy: 0.09713333333333334, validation accuracy: 0.101\n",
+      "cost: 2364.3569173984047, training accuracy: 0.09713333333333334, validation accuracy: 0.101\n",
+      "cost: 2662.129904159121, training accuracy: 0.09713333333333334, validation accuracy: 0.101\n",
+      "cost: 2406.8687508553194, training accuracy: 0.09713333333333334, validation accuracy: 0.101\n"
      ]
     }
    ],
    "source": [
-    "layer_dimensions = [X_train.shape[0], 20, 10]  # including the input and output layers\n",
+    "layer_dimensions = [X_train.shape[0], 200, 100, 10]  # including the input and output layers\n",
     "NN = NeuralNetwork(layer_dimensions)\n",
-    "NN.train(X_train, y_train, iters=20, alpha=0.00001, batch_size=100, print_every=5)"
+    "NN.train(X_train, y_train, iters=25, alpha=0.00001, batch_size=100, print_every=5)"
    ]
   },
   {
